fix: resolve auto-configuration, versioning, and event store issues
- Add @EnableConfigurationProperties to EventStoreAutoConfiguration and
  SnapshotAutoConfiguration so they self-register EventSourcingProperties
  instead of depending on EventSourcingAutoConfiguration loading first
- Add @AutoConfigureAfter(R2dbcBeansAutoConfiguration) to ensure
  EventStoreAutoConfiguration evaluates after DB beans exist
- Add @ConditionalOnBean guards to eventStoreMetrics,
  eventSourcingTransactionalAspect, and eventOutboxService beans
- Fix AggregateRoot initial version from 0 to -1 to align with DB
  convention where -1 means non-existent aggregate
- Remove in-memory globalSequenceCounter from R2dbcEventStore and let
  PostgreSQL BIGSERIAL handle global_sequence auto-generation
- Implement EventTypeRegistry classpath scanning using Spring's
  ClassPathScanningCandidateComponentProvider instead of placeholder stubs
- Update test assertions for new version semantics