@@ -22,18 +22,23 @@ import com.fasterxml.jackson.databind.jsontype.NamedType;
 import org.fireflyframework.eventsourcing.domain.Event;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.ClassPathScanningCandidateComponentProvider;
 import org.springframework.context.event.EventListener;
+import org.springframework.core.type.filter.AnnotationTypeFilter;
+import org.springframework.core.type.filter.AssignableTypeFilter;
 
-import java.util.Map;
+import java.util.Collections;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * Registry for automatically discovering and registering event types with Jackson.
  * <p>
- * This component scans for classes that implement {@link Event} and are annotated
- * with {@link JsonTypeName}, then automatically registers them with the ObjectMapper
+ * This component scans the classpath for classes that implement {@link Event} and are
+ * annotated with {@link JsonTypeName}, then registers them with the ObjectMapper
  * for proper polymorphic serialization/deserialization.
  * <p>
  * Usage:
@@ -52,28 +57,25 @@ public class EventTypeRegistry {
 
     private final ApplicationContext applicationContext;
     private final ObjectMapper objectMapper;
+    private final Set<String> registeredTypes = ConcurrentHashMap.newKeySet();
 
     /**
      * Automatically registers all discovered event types when the application is ready.
-     * This ensures that all event classes are properly configured for serialization.
+     * Scans the classpath for {@link Event} implementations annotated with {@link JsonTypeName}.
      */
     @EventListener(ApplicationReadyEvent.class)
     public void registerEventTypes() {
         log.info("Starting automatic event type registration...");
-        
-        // Find all Event implementations with JsonTypeName annotations
-        Map<String, Event> eventBeans = applicationContext.getBeansOfType(Event.class);
-        
-        // Also scan for event classes (not just beans)
+
         registerEventClasses();
-        
-        log.info("Completed automatic event type registration for {} event types", eventBeans.size());
+
+        log.info("Completed automatic event type registration: {} event types registered", registeredTypes.size());
     }
-    
+
     /**
      * Manually register an event type with the ObjectMapper.
-     * This is useful for events that aren't Spring beans or for programmatic registration.
-     * 
+     * This is useful for events that aren't discoverable via classpath scanning.
+     *
      * @param eventClass the event class to register
      */
     public void registerEventType(Class<? extends Event> eventClass) {
@@ -81,44 +83,68 @@ public class EventTypeRegistry {
         if (annotation != null) {
             String typeName = annotation.value();
             objectMapper.registerSubtypes(new NamedType(eventClass, typeName));
+            registeredTypes.add(typeName);
             log.debug("Manually registered event type: {} -> {}", typeName, eventClass.getSimpleName());
         } else {
-            log.warn("Event class {} does not have @JsonTypeName annotation, skipping registration", 
+            log.warn("Event class {} does not have @JsonTypeName annotation, skipping registration",
                     eventClass.getSimpleName());
         }
     }
-    
+
     /**
      * Register an event type with a custom type name.
-     * 
+     *
      * @param eventClass the event class to register
      * @param typeName the custom type name to use
      */
     public void registerEventType(Class<? extends Event> eventClass, String typeName) {
         objectMapper.registerSubtypes(new NamedType(eventClass, typeName));
+        registeredTypes.add(typeName);
         log.debug("Manually registered event type: {} -> {}", typeName, eventClass.getSimpleName());
     }
-    
+
     /**
      * Get all registered event type names.
-     * 
-     * @return set of registered type names
+     *
+     * @return unmodifiable set of registered type names
      */
     public Set<String> getRegisteredEventTypes() {
-        // This is a simplified implementation
-        // In practice, we could maintain our own registry of registered types
-        log.debug("Getting registered event types - this is a placeholder implementation");
-        return Set.of(); // Placeholder - could be enhanced to track registrations
+        return Collections.unmodifiableSet(registeredTypes);
     }
-    
+
     /**
-     * Scans for event classes in the classpath.
-     * This is a simplified implementation - in practice you might want to use
-     * classpath scanning libraries like Reflections or Spring's ClassPathScanningCandidateComponentProvider.
+     * Scans the classpath for classes implementing {@link Event} that are annotated
+     * with {@link JsonTypeName}, and registers them with Jackson's ObjectMapper.
      */
+    @SuppressWarnings("unchecked")
     private void registerEventClasses() {
-        // For now, we'll rely on Spring beans and manual registration
-        // A future enhancement could add classpath scanning
-        log.debug("Event class scanning not implemented yet - relying on manual registration and Spring beans");
+        ClassPathScanningCandidateComponentProvider scanner =
+                new ClassPathScanningCandidateComponentProvider(false);
+        scanner.addIncludeFilter(new AssignableTypeFilter(Event.class));
+        scanner.addIncludeFilter(new AnnotationTypeFilter(JsonTypeName.class));
+
+        String[] basePackages = applicationContext.getEnvironment()
+                .getProperty("firefly.eventsourcing.event-scan-packages", String.class, "org.fireflyframework")
+                .split(",");
+
+        for (String basePackage : basePackages) {
+            Set<BeanDefinition> candidates = scanner.findCandidateComponents(basePackage.trim());
+            for (BeanDefinition candidate : candidates) {
+                try {
+                    Class<?> eventClass = Class.forName(candidate.getBeanClassName());
+                    if (Event.class.isAssignableFrom(eventClass)) {
+                        JsonTypeName annotation = eventClass.getAnnotation(JsonTypeName.class);
+                        if (annotation != null) {
+                            String typeName = annotation.value();
+                            objectMapper.registerSubtypes(new NamedType(eventClass, typeName));
+                            registeredTypes.add(typeName);
+                            log.debug("Auto-registered event type: {} -> {}", typeName, eventClass.getSimpleName());
+                        }
+                    }
+                } catch (ClassNotFoundException e) {
+                    log.warn("Could not load event class: {}", candidate.getBeanClassName(), e);
+                }
+            }
+        }
     }
 }
